idea/testData/checker/regression/ClassDeclarationAfterDot.fir.kt
class A

fun f() {
    A.<error descr="[EXPRESSION_REQUIRED] ">class</error><EOLError descr="Name expected"></EOLError>
}
